@@ -17,6 +17,9 @@ Revision history for Perl module Math::Prime::Util
       should stay under ~150MB even with giant sizes.
       Thanks to Kim Walisch for all discussions about this.
 
+    - divisor_sum can take a '1' as the second argument as an alias for
+      sub {1}, but works much faster.
+
 0.31  2013-08-07
 
     - Change proof certificate documentation to reflect the new text format.
